# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: tests-and-linter.yml
gendiff/: __init__.py  comparison.py  gendiff.py  parser.py  shared.py  titles.py
gendiff/formation/: jsonify.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff_package/: __init__.py  formation.py  gendiff.py  parser.py
gendiff_package/formation/: __init__.py  jsonify.py  plain.py  stylish.py
gendiff_package/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file3.json  file4.json  output1.txt  output2.txt  output3.txt
