[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    {include = 'gendiff_package'}
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff_package.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
