[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Python CLI tool to compare configuration files"
authors = ["glebondri <launcher.zet@gmail.com>"]
readme = "README.md"
repository = "https://github.com/glebondri/python-project-50"
packages = [
    {include = 'gendiff'}
]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^7.0.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
